fixed spacing for each schedule matchup to better fit the smaller screen sizes

--- a/src/components/schedules/Schedules.css
+++ b/src/components/schedules/Schedules.css
@@ -50,16 +50,13 @@
   padding: 12px 16px;
   transition: background-color 0.3s ease;
   cursor: pointer;
-  border-bottom: 1px solid #d9e2f7;
   border-top: 1px solid #d9e2f7;
 }
 
 .schedules-accordian-button:hover {
   filter: brightness(175%);
 }
-.team-schedule {
-  border: 1px solid white;
-}
+
 .team-schedules {
   list-style: none;
   line-height: 1.5;
@@ -94,8 +91,8 @@
   display: flex;
   gap: 5%;
   border-bottom: 0.5px solid grey;
-  padding: 5px 10px;
-  width: 100%;
+  padding: 5px;
+  width: 97.5%;
 }
 
 .schedule-week {
@@ -167,11 +164,11 @@
     font-size: 14px;
   }
   .team-schedules {
-    font-size: 12px;
+    font-size: 14px;
   }
   .schedule-week {
-    width: 20%;
-    font-size: 10px;
+    width: 15%;
+    font-size: 14px;
     display: flex;
     align-items: center;
   }
@@ -179,13 +176,13 @@
     width: 45%;
   }
   .schedule-result {
-    width: 15%;
-    font-size: 10px;
+    width: 12.5%;
+    font-size: 14px;
     display: flex;
     align-items: center;
   }
   .schedule-score {
-    font-size: 10px;
+    font-size: 14px;
     display: flex;
     align-items: center;
   }
@@ -205,13 +202,13 @@
     width: 90%;
   }
   .schedules-accordian-button {
-    font-size: 12px;
+    font-size: 14px;
   }
   .team-schedules {
-    font-size: 10px;
+    font-size: 12px;
   }
   .schedule-week {
-    width: 20%;
+    width: 15%;
     font-size: 10px;
     display: flex;
     align-items: center;
@@ -220,13 +217,13 @@
     width: 45%;
   }
   .schedule-result {
-    width: 15%;
-    font-size: 10px;
+    width: 12.5%;
+    font-size: 12px;
     display: flex;
     align-items: center;
   }
   .schedule-score {
-    font-size: 10px;
+    font-size: 12px;
     display: flex;
     align-items: center;
   }
